style: fix some header spacing

--- a/app/styles/components/header.css
+++ b/app/styles/components/header.css
@@ -14,7 +14,7 @@
 
 .header.fixed .header__nav {
   align-items: flex-start;
-  margin-top: 0.5rem;
+  margin-top: 0.7rem;
 }
 
 .header__nav {
@@ -25,28 +25,44 @@
 }
 
 .header__nav-wrapper {
-  --header-gap: 1rem;
+  --header-gap: 0.8rem;
   display: flex;
   align-items: center;
   gap: var(--header-gap);
-  font-weight: 500;
-  font-size: 0.9rem;
+  margin-left: 0.4rem;
+}
+
+.header.fixed .header__nav-wrapper {
+  --header-gap: 1.3rem;
+  margin-top: 0.3rem;
+  margin-left: 0.3rem;
 }
 
 .header__nav-wrapper.links {
-  --header-gap: 0.5rem;
+  --header-gap: 0.37rem;
+  font-weight: 500;
+  margin-top: 0 !important;
+}
+
+.header.fixed .header__nav-wrapper.links {
+  --header-gap: 0.35rem;
 }
 
 .header__nav-wrapper.links a {
   padding: 0 0.5rem;
+  font-size: 0.9rem;
   letter-spacing: 0.5px;
+}
+
+.header.fixed .header__nav-wrapper.links a {
+  letter-spacing: normal;
 }
 
 .burger {
   display: flex;
   flex-direction: column;
   gap: 3px;
-  width: 17px;
+  width: 18px;
   cursor: pointer;
 }
 
@@ -57,8 +73,12 @@
 
 .header__nav-logo {
   height: 100%;
-  width: 100px;
+  width: 105px;
   display: flex;
+}
+
+.header.fixed .header__nav-logo {
+  width: 85px;
 }
 
 .cls-1-menu {
